# prolog-cc

./: .gitignore  Makefile  README.md  cabal.sandbox.config  makefile  patch  prolog-cc.cabal  prolog-fd.cabal  prolog.cabal
bench/: Bench.hs  Bench2.hs  Makefile  Trace2.hs  animals.pl  format.pl  queens.pl  queens1-1.pl  queens1.pl  test1.pl  test2-1.pl  test2.pl  test3.pl  test4.pl
src/: Database2.hs  Interpreter.hs  Interpreter2.hs  Parser2.hs  Prolog2.hs  Quote2.hs  Syntax.hs  Syntax2.hs  Test.hs  Test2.hs  Unifier.hs  test.pl
src/Language/: Prolog.hs  Prolog2.hs
src/Language/Prolog/: Database.hs  Interpreter.hs  IsString.hs  Parser.hs  Quote.hs  Specs.hs  Syntax.hs  Unifier.hs
src/Language/Prolog2/: Builtins.hs  Database.hs  IO.hs  Interpreter.hs  InterpreterCommon.hs  InterpreterIO.hs  Makefile  NamedGraph.hs  Parser.hs  Parser2.hs  ParserIO.hs  Quote.hs  Syntax.hs  SystemDatabase.hs  Token.hs  Trace.hs  Types.hs
src/Prolog/: Database.hs  Database2.hs  Interpreter.hs  Interpreter2.hs  Parser.hs  Parser2.hs  Prolog.hs  Quote2.hs  Syntax.hs  Syntax2.hs  Trace2.hs
src/Text/Parsec/: PrologExpr.hs
test/: Makefile  ParserSpec.hs  PrologExprTest.hs  PrologSpec.hs  TestImport.hs  queens.pl  unicode.pl
unification-fd-0.10.0.1/src/Control/Monad/: EitherK.hs  Makefile  MaybeK.hs
unification-fd-0.10.0.1/src/Control/Monad/State/: UnificationExtras.hs
unification-fd-0.10.0.1/src/Control/Unification/: IntVar.hs  Makefile
