Name:                prolog-fd
Version:             0.1
Synopsis:            A Prolog interpreter written in Haskell, optimized using unification-fd.
License:             PublicDomain
Author:              Matthias Bartsch, Makoto Nishiura
Maintainer:          nishiuramakoto@gmail.com
Category:            Language
Build-type:          Simple

Cabal-version:       >=1.8

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False


Library
  Hs-Source-Dirs:  src , unification-fd-0.10.0.1/src
  Exposed-modules: Language.Prolog2
                   Language.Prolog2.Interpreter
                   Language.Prolog2.Database
                   Language.Prolog2.Syntax
                   Language.Prolog2.Trace
                   Language.Prolog2.Parser
                   -------
                   Control.Monad.State.UnificationExtras
                   Control.Monad.MaybeK
                   Control.Monad.EitherK
                   Control.Unification
                   Control.Unification.STVar
                   Control.Unification.Types
                   Control.Unification.Ranked
                   Control.Unification.IntVar
                   Control.Unification.Ranked.STVar
                   Control.Unification.Ranked.IntVar
                   Data.Functor.Fixedpoint
  Other-modules:

  if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
  else
        ghc-options:   -Wall -fwarn-tabs -O2

  extensions: CPP

  Build-depends:

                base >=4 && <5,
                parsec >= 3.1.1,
                syb >= 0.3,
                mtl >= 2.0.1.0,
                containers >=0.4,

                template-haskell,
                th-lift >=0.5.3,
                transformers >=0.2.2.0,

                list-extras,
                text-icu >= 0.7.0.1,
                text-regex-replace >= 0.1.1.1,
                text >= 1.2.2.0,
                logict >= 0.6.0.2 ,
                directory

-- executable bench
--   main-is: Bench.hs
--   hs-source-dirs: bench
--   build-depends: base, prolog2 , deepseq, text

  -- ghc-options:  -fprof-auto -rtsopts -with-rtsopts="-p"
  -- ghc-options: -prof -fprof-auto -rtsopts -with-rtsopts="-p"

executable bench2
  main-is: Bench2.hs
  hs-source-dirs: bench
  build-depends: base,mtl,syb, prolog-fd , deepseq , text
--  ghc-options:  -fprof-auto -rtsopts



test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: CPP

    build-depends: base
                 , prolog-fd
                 , mtl  >= 2.2.1
                 , text >= 1.2.2.0
                 , QuickCheck
                 , hspec >= 2.0.0
